[package]
name = "mech-program"
version = "0.2.2"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Organizes Mech cores into a coordinated program."
documentation = "http://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2021"

[badges]
gitlab = { repository = "mech-lang/mech", branch = "main" }
maintenance = { status = "actively-developed" }

[dependencies]
mech-core = "0.2.2"
mech-syntax = "0.2.2"
mech-utilities = "0.2.2"

time = "0.3.30"
serde = "1.0.189"
serde_derive = "1.0.189"
serde_json = "1.0.107"
bincode = "1.3.3"
libloading = "0.8.3"
lazy_static = "1.4.0"
reqwest = "0.9.22"
colored = "2.0.4"
crossbeam-channel = "0.5.8"
url = "2.4.1"
hashbrown = "0.15.0"
websocket = "0.26.5"
miniz_oxide = "0.7.1"
indexmap = "2.0.2"

[patch.crates-io]
mech-core = {path = "../core"}
mech-syntax = {path = "../syntax"}
mech-utilities = {path = "../utilities"}