[package]
name = "mech-program"
version = "0.3.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Program orchestration layer for Mech runtimes."
documentation = "https://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.92"

[dependencies]
mech-core = { version = "0.3.5", default-features = false }
mech-syntax = { version = "0.3.5", default-features = false, features = ["compiler"] }
mech-interpreter = { version = "0.3.5", default-features = false }
crossbeam-channel = "0.5.15"
serde = { version = "1.0.228", features = ["derive"] }

[patch.crates-io]
mech-core = { path = "../core" }
mech-syntax = { path = "../syntax" }
mech-interpreter = { path = "../interpreter" }
