[package]
name = "mech-resolver"
version = "0.3.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Source resolver for Mech programs, used by the Mech runtime and compiler."
documentation = "https://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.92"

[features]


[dependencies]
mech-core = { version = "0.3.5", default-features = false }
serde = { version = "1.0.228", optional = true }
serde_derive = { version = "1.0.228", optional = true }