[package]
name = "mech-runtime"
version = "0.3.5"
authors = ["Corey Montella <corey@mech-lang.org>"]
description = "Runtime abstraction layer for Mech execution backends."
documentation = "https://docs.mech-lang.org"
homepage = "https://mech-lang.org"
repository = "https://github.com/mech-lang/mech"
keywords = ["mech", "language", "programming", "dataflow", "runtime"]
categories = ["science::robotics", "science", "game-engines", "web-programming"]
license = "Apache-2.0"
readme = "README.md"
edition = "2024"
rust-version = "1.92"

[features]
no_std = ["mech-program/no_std"]
default = ["mech-program/default"]
base = ["mech-program/base"]
persister = ["mech-program/persister"]
runloop = ["mech-program/runloop"]
mechfs = ["mech-program/mechfs"]
async = ["mech-program/async"]
trace = ["dep:tracing", "mech-program/trace"]
profile = ["mech-program/profile"]
statements_default = ["mech-program/statements_default"]
subscript_default = ["mech-program/subscript_default"]
stdlib = ["mech-program/stdlib"]
baselib = ["mech-program/baselib"]
compiler = ["mech-program/compiler"]
program = ["mech-program/program"]
pretty_print = ["mech-program/pretty_print"]
serde = ["dep:serde", "dep:serde_derive", "mech-program/serde"]
mika = ["mech-program/mika"]
statements = ["mech-program/statements"]
variables = ["mech-program/variables"]
variable_define = ["mech-program/variable_define"]
invariant_define = ["mech-program/invariant_define"]
variable_assign = ["mech-program/variable_assign"]
kind_define = ["mech-program/kind_define"]
kind_annotation = ["mech-program/kind_annotation"]
formulas = ["mech-program/formulas"]
functions = ["mech-program/functions"]
state_machines = ["mech-program/state_machines"]
symbol_table = ["mech-program/symbol_table"]
bool = ["mech-program/bool"]
string = ["mech-program/string"]
numbers = ["mech-program/numbers"]
complex = ["mech-program/complex"]
rational = ["mech-program/rational"]
signed_ints = ["mech-program/signed_ints"]
unsigned_ints = ["mech-program/unsigned_ints"]
floats = ["mech-program/floats"]
u8 = ["mech-program/u8"]
u16 = ["mech-program/u16"]
u32 = ["mech-program/u32"]
u64 = ["mech-program/u64"]
u128 = ["mech-program/u128"]
i8 = ["mech-program/i8"]
i16 = ["mech-program/i16"]
i32 = ["mech-program/i32"]
i64 = ["mech-program/i64"]
i128 = ["mech-program/i128"]
f32 = ["mech-program/f32"]
f64 = ["mech-program/f64"]
c64 = ["mech-program/c64"]
r64 = ["mech-program/r64"]
set = ["mech-program/set"]
map = ["mech-program/map"]
table = ["mech-program/table"]
tuple = ["mech-program/tuple"]
enum = ["mech-program/enum"]
record = ["mech-program/record"]
atom = ["mech-program/atom"]
matrix = ["mech-program/matrix"]
fixed_row_vector = ["mech-program/fixed_row_vector"]
fixed_vector = ["mech-program/fixed_vector"]
fixed_matrix = ["mech-program/fixed_matrix"]
dynamic_matrix = ["mech-program/dynamic_matrix"]
row_vector4 = ["mech-program/row_vector4"]
row_vector3 = ["mech-program/row_vector3"]
row_vector2 = ["mech-program/row_vector2"]
vector4 = ["mech-program/vector4"]
vector3 = ["mech-program/vector3"]
vector2 = ["mech-program/vector2"]
matrix4 = ["mech-program/matrix4"]
matrix3 = ["mech-program/matrix3"]
matrix2 = ["mech-program/matrix2"]
matrix1 = ["mech-program/matrix1"]
matrix2x3 = ["mech-program/matrix2x3"]
matrix3x2 = ["mech-program/matrix3x2"]
row_vectord = ["mech-program/row_vectord"]
vectord = ["mech-program/vectord"]
matrixd = ["mech-program/matrixd"]
subscript = ["mech-program/subscript"]
subscript_slice = ["mech-program/subscript_slice"]
subscript_range = ["mech-program/subscript_range"]
subscript_formula = ["mech-program/subscript_formula"]
logical_indexing = ["mech-program/logical_indexing"]
dot_indexing = ["mech-program/dot_indexing"]
swizzle = ["mech-program/swizzle"]
matrix_horzcat = ["mech-program/matrix_horzcat"]
matrix_vertcat = ["mech-program/matrix_vertcat"]

[dependencies]
mech-program = { version = "0.3.5", default-features = false }
serde = { version = "1.0.228", optional = true }
serde_derive = { version = "1.0.228", optional = true }
tracing = { version = "0.1.41", optional = true }
